reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_with_attributes_input.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldStringReflectBothDifferently::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "name": "reflect_demo::test::TestStructOneBasicFieldStringReflectBothDifferently",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "i32"
          },
          "_debug": ""
        }
      ],
      "_debug": ""
    }
  ],
  "_debug": ""
}
