reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_with_attributes_output.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldStringReflectBothDifferently::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructOneBasicFieldStringReflectBothDifferently",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u32"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u32"
    }
  ]
}
