reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_option_output.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructOption::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructOption",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::option::Option",
            "parameters": [
              {
                "name": "u8"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::option::Option",
      "description": "Optional / Nullable value type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
