reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_fixed_size_array_output.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructWithFixedSizeArray::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithFixedSizeArray",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::array::Array",
            "parameters": [
              {
                "name": "u8"
              },
              {
                "name": "3"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::array::Array",
      "description": "Fixed-size Array",
      "parameters": [
        {
          "name": "T"
        },
        {
          "name": "N"
        }
      ],
      "fallback": {
        "name": "std::vec::Vec",
        "parameters": [
          {
            "name": "T"
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
