reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_hashmap_input.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructWithHashMap::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithHashMap",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::collections::HashMap",
            "parameters": [
              {
                "name": "u8"
              },
              {
                "name": "std::string::String"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::collections::HashMap",
      "description": "Key-value map type",
      "parameters": [
        {
          "name": "K"
        },
        {
          "name": "V"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
